styles.css
/* From Google Fonts */

/* latin-ext */
@font-face {
  font-family: "Poppins";
  font-style: normal;
  font-weight: 300;
  font-display: swap;
  src: url(/files/poppins-300.woff2) format("woff2");
  unicode-range: U+0100-02BA, U+02BD-02C5, U+02C7-02CC, U+02CE-02D7,
    U+02DD-02FF, U+0304, U+0308, U+0329, U+1D00-1DBF, U+1E00-1E9F, U+1EF2-1EFF,
    U+2020, U+20A0-20AB, U+20AD-20C0, U+2113, U+2C60-2C7F, U+A720-A7FF;
}

/* latin */
@font-face {
  font-family: "Poppins";
  font-style: normal;
  font-weight: 300;
  font-display: swap;
  src: url(/files/poppins-300.woff2) format("woff2");
  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA,
    U+02DC, U+0304, U+0308, U+0329, U+2000-206F, U+20AC, U+2122, U+2191, U+2193,
    U+2212, U+2215, U+FEFF, U+FFFD;
}

/* latin-ext */
@font-face {
  font-family: "Poppins";
  font-style: normal;
  font-weight: 600;
  font-display: swap;
  src: url(/files/poppins-600.woff2) format("woff2");
  unicode-range: U+0100-02BA, U+02BD-02C5, U+02C7-02CC, U+02CE-02D7,
    U+02DD-02FF, U+0304, U+0308, U+0329, U+1D00-1DBF, U+1E00-1E9F, U+1EF2-1EFF,
    U+2020, U+20A0-20AB, U+20AD-20C0, U+2113, U+2C60-2C7F, U+A720-A7FF;
}

/* latin */
@font-face {
  font-family: "Poppins";
  font-style: normal;
  font-weight: 600;
  font-display: swap;
  src: url(/files/poppins-600.woff2) format("woff2");
  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA,
    U+02DC, U+0304, U+0308, U+0329, U+2000-206F, U+20AC, U+2122, U+2191, U+2193,
    U+2212, U+2215, U+FEFF, U+FFFD;
}

/* Global Variables */
:root {
  --font-size-root: 18px;
  --nav-bar-height: 4rem;
}

/* ======================================================================================================================== */

/* Global Styling */

body {
  margin: 0;
  padding: 0;
  font-family: "Poppins", sans-serif;
}

h1,
h2 {
  margin: 0;
  margin-block: 0;
}

hr {
  margin: 1rem 0;
}

a {
  cursor: pointer;
  color: red;
}

ul {
  padding-inline-start: 25px;
}

.top {
  margin-top: var(--nav-bar-height);
  min-height: calc(100vh - var(--nav-bar-height));
}

.content {
  /* margin-top: 6rem;
  margin-bottom: 10%;
  padding-left: 20%;
  padding-right: 20%; */

  padding: 2rem 20%;
}

@media screen and (max-width: 1212px) and (min-width: 920px) {
  .content {
    padding-left: 10%;
    padding-right: 10%;
  }
}

@media screen and (max-width: 920px) {
  .content {
    padding-left: 5%;
    padding-right: 5%;
  }
}

/* ======================================================================================================================== */

/* Navigation Bar */

nav {
  left: 0;
  top: 0;
  height: var(--nav-bar-height);
  position: fixed;
  width: 100%;
  background-color: rgb(255, 255, 255);
  box-shadow: 0px 4px 4px 0px #00000040;
  z-index: 1;
}

nav ul {
  list-style-type: none;
  margin: 0;
  padding: 0;
  float: right;
}

/* https://stackoverflow.com/questions/20920265/horizontal-menu-how-to-float-right-but-keep-the-menu-items-in-the-correct-order */
nav ul li {
  float: left;
  display: table-cell;
  vertical-align: middle;
}

nav ul li a {
  font-family: "Poppins", sans-serif;
  font-size: 1.5rem;
  position: sticky;
  display: block;
  color: rgb(0, 0, 0);
  text-align: center;
  padding: 14px 16px;
  text-decoration: none;
}

nav ul li a:hover {
  color: #ff0000;
}

nav .hamburger {
  display: none;
}

.logo-li {
  position: absolute;
  display: inline-block;
  z-index: 1;
  top: 0;
  left: 0;
  padding: 14px 16px;
}

.logo-li a {
  text-decoration: none;
  font-size: 1.5rem;
}

.logo-text {
  position: sticky;
  color: rgb(0, 0, 0);
  font-weight: bold;
  vertical-align: middle;
  text-decoration: underline;
  text-decoration-color: red;
  text-decoration-thickness: 3px;
}

.logo-text:hover {
  color: rgb(255, 0, 0);
}

@media screen and (max-width: 920px) {
  nav ul {
    margin-top: 4rem;
    transition: transform 400ms cubic-bezier(0.23, 1, 0.32, 1);
    display: none;
    box-shadow: 0px 4px 4px 0px #00000040;
    position: fixed;
    width: 100%;
  }

  nav ul li,
  nav ul li a {
    width: 100%;
    background-color: rgb(255, 255, 255);
  }

  .logo-li,
  .logo-li a,
  .logo-text {
    display: inline-block;
  }

  nav .hamburger {
    position: fixed;
    display: block;
    padding: 12px 16px;
    right: 0;
    top: 0;
    z-index: 1;
    cursor: pointer;
  }

  nav svg.hamburger:hover rect {
    fill: red;
  }
}

/* ======================================================================================================================== */

footer .footer-container {
  width: 100%;
  display: flex;
  flex-wrap: wrap;
  justify-content: space-evenly;
}

.footer-container .footer-left,
.footer-container .footer-right {
  padding: 1rem 0;
}

.footer-container > .footer-left {
  text-align: center;
  padding: 3rem 0;
}

.footer-container .footer-right > p {
  text-align: center;
}

ul.footer-contacts {
  list-style: none;
  padding: 0;
  margin: 0 auto;
  display: inline;
}

.footer-container li {
  padding: 0.5rem 0;
  width: 15rem;
  margin: 0 auto;
}

.footer-container li img {
  vertical-align: middle;
  width: 2rem;
}

.hr-top,
.hr-bottom {
  position: static;
  margin-top: 3%;
  margin-bottom: 3%;
}

.footer-copyright {
  text-align: center;
  margin-bottom: 3%;
}

/* ======================================================================================================================== */

/* Home Page */

.text {
  margin-top: 5%;
  vertical-align: middle;
}

#highlight {
  color: black;
  text-decoration-color: red;
  text-decoration-line: underline;
  text-decoration-thickness: 5px;
}

.home-container {
  --home-container-height: calc(100vh - var(--nav-bar-height));
  --content-height: 50vh;
  width: 100%;
  height: var(--home-container-height) - 2 * var(--content-height);
  padding: calc((var(--home-container-height) - var(--content-height)) / 2) 0;
  display: flex;
  flex-wrap: wrap;
  justify-content: space-evenly;
}

.left-content,
.right-content {
  height: var(--content-height);
  width: 50vw;
}

.left-content > img {
  --image-height: calc(var(--content-height) - 2rem);
  --shift: -2vw;
  width: var(--image-height);
  border-radius: 100%;
  margin: calc((var(--content-height) - var(--image-height)) / 2)
    calc(((50vw - var(--image-height)) / 2) + var(--shift))
    calc((var(--content-height) - var(--image-height)) / 2)
    calc(((50vw - var(--image-height)) / 2) - var(--shift));
  display: block;
}

.right-content {
  padding: 3rem 0 3rem 3rem;
  height: calc(var(--content-height) - 2 * 3rem);
  width: calc(50vw - 3rem);
}

.contacts-container {
  width: 35vw;
  margin: 5vh 0 0;
  display: flex;
  justify-content: space-between;
  flex-wrap: wrap;
}

.about {
  padding: 0 20% 3rem;
}

.contacts-container > .contacts-item {
  min-width: 10vw;
}

.contacts-item a {
  display: flex;
  justify-content: center;
}

.contacts-item img {
  width: 80%;
}

@media screen and (max-width: 840px) {
  .about {
    padding: 0 5% 3rem;
  }

  .home-container {
    padding: 5vh 0 0;
  }

  .left-content {
    width: 100vw;
    max-height: 80vw;
  }

  .left-content img {
    max-width: 80vw;
    margin: auto;
  }

  .right-content {
    text-align: center;
    width: 80vw;
    max-height: 45%;
    padding: 2vh 0 5vh;
  }

  .right-content ul li {
    text-align: left;
    margin: 0 auto;
  }

  .contacts-container {
    width: 80vw;
    margin: 5vh auto 0;
  }

  .contacts-container > .contacts-item {
    min-width: 20vw;
  }
}

/* ======================================================================================================================== */

/* Project Card */

.project-card {
  width: 100%;
  display: flex;
  flex-wrap: wrap;
  justify-content: space-evenly;
}

.project-wrapper {
  width: 100%;
}

.project-card p {
  max-width: 100%;
  overflow-wrap: break-word;
}

.project-card > h2,
.project-card > p {
  margin: 0;
}

.project-card p {
  margin: 0.5rem 0;
}

.project-wrapper > .project-left {
  flex-grow: 1;
  float: left;
  /* max-width: 60%; */
}

.project-wrapper > .project-right {
  flex-grow: 1;
  float: right;
  text-align: right;
  /* max-width: 40%; */
}

.project-link {
  background-image: url(/files/svg/github.svg);
  background-repeat: no-repeat;
  padding-left: 1.75rem;
}

@media screen and (max-width: 810px) {
  .project-wrapper > .project-left,
  .project-wrapper > .project-right {
    width: 100%;
  }

  .project-wrapper > .project-right p:not(.project-link) {
    display: none;
  }

  .project-link {
    text-align: left !important;
  }
}

/* ======================================================================================================================== */

/* Experience Card */

.experience-card {
  width: 100%;
  display: flex;
  flex-wrap: wrap;
  justify-content: space-evenly;
}

.experience-wrapper {
  width: 100%;
}

.experience-card > p {
  max-width: 100%;
  width: 100%;
  overflow-wrap: break-word;
}

.experience-card p {
  margin-block: 0.25rem;
}

.experience-card {
  margin: 0.5rem 0 0;
}

.experience-wrapper > .experience-left {
  flex-grow: 1;
  float: left;
  max-width: 52%;
}

.experience-wrapper > .experience-right {
  flex-grow: 1;
  float: right;
  text-align: right;
  max-width: 45%;
}

details {
  width: 100%;
}

details > ul {
  padding-inline-start: 1.5rem;
  margin-block: 0;
}

/* ======================================================================================================================== */

